fixed table alignment issues

--- a/src/components/Data/Data.css
+++ b/src/components/Data/Data.css
@@ -1,7 +1,10 @@
 table, th, td {
     border: 1px solid black;
+    text-align: center;
 }
 
 table {
-    width: 100%;
+    width: 80%;
+    border-collapse: collapse;
 }
+
